--- a/beats-frontend/index.html
+++ b/beats-frontend/index.html
@@ -19,6 +19,7 @@
         <div class="drums">
             <div class="kick">
                 kick
+                test
                 <input type="checkbox">
                 <input type="checkbox">
                 <input type="checkbox">
