--- a/beats-frontend/index.html
+++ b/beats-frontend/index.html
@@ -12,6 +12,7 @@
     <h1>BeatPete</h1>
     <input type="range" id="bpm" value="100">
         <div>
+            <button id="loadBeatButton">load beat</button>
             <select id="beatSelect">
                 <option selected="selected">-Load a beat-</option>
             </select>
@@ -19,7 +20,6 @@
         <div class="drums">
             <div class="kick">
                 kick
-                test
                 <input type="checkbox">
                 <input type="checkbox">
                 <input type="checkbox">
@@ -39,6 +39,25 @@
             </div>
             <div class="eight">
                 808
+                <input type="checkbox">
+                <input type="checkbox">
+                <input type="checkbox">
+                <input type="checkbox">
+                <input type="checkbox">
+                <input type="checkbox">
+                <input type="checkbox">
+                <input type="checkbox">
+                <input type="checkbox">
+                <input type="checkbox">
+                <input type="checkbox">
+                <input type="checkbox">
+                <input type="checkbox">
+                <input type="checkbox">
+                <input type="checkbox">
+                <input type="checkbox">
+            </div>
+            <div class="hat">
+                hats
                 <input type="checkbox">
                 <input type="checkbox">
                 <input type="checkbox">
@@ -89,7 +108,7 @@
         <script src="beatpete.js"></script>
 </body>
 <hr>
-<h1>hello</h1>
+<h1>Volume Area:</h1>
 </center>
 </html>
 
