--- a/beats-frontend/index.html
+++ b/beats-frontend/index.html
@@ -26,93 +26,93 @@
       
 
 <div class="card">
-  
+  <center>
   <div class="container">
     <h1>BeatPete</h1>
     <input type="range" id="bpm" value="100">
-        <div>
+        <div id="a">
             <button id="loadBeatButton">load beat</button>
             <select id="beatSelect">
                 <option selected="selected">-Load a beat-</option>
             </select>
+            <input type="text" id="beatName" value="">
         </div>
         <div class="drums">
             <div class="kick">
                 kick
-                test
-                <input type="checkbox" value = "">
-                <input type="checkbox" value = "">
-                <input type="checkbox" value = "">
-                <input type="checkbox" value = "">
-                <input type="checkbox" value = "">
-                <input type="checkbox" value = "">
-                <input type="checkbox" value = "">
-                <input type="checkbox" value = "">
-                <input type="checkbox" value = "">
-                <input type="checkbox" value = "">
-                <input type="checkbox" value = "">
-                <input type="checkbox" value = "">
-                <input type="checkbox" value = "">
-                <input type="checkbox" value = "">
-                <input type="checkbox" value = "">
-                <input type="checkbox" value = "">
+                <input type="checkbox" id="kickBox" value = "">
+                <input type="checkbox" id="kickBox" value = "">
+                <input type="checkbox" id="kickBox" value = "">
+                <input type="checkbox" id="kickBox" value = "">
+                <input type="checkbox" id="kickBox" value = "">
+                <input type="checkbox" id="kickBox" value = "">
+                <input type="checkbox" id="kickBox" value = "">
+                <input type="checkbox" id="kickBox" value = "">
+                <input type="checkbox" id="kickBox" value = "">
+                <input type="checkbox" id="kickBox" value = "">
+                <input type="checkbox" id="kickBox" value = "">
+                <input type="checkbox" id="kickBox" value = "">
+                <input type="checkbox" id="kickBox" value = "">
+                <input type="checkbox" id="kickBox" value = "">
+                <input type="checkbox" id="kickBox" value = "">
+                <input type="checkbox" id="kickBox" value = "">
             </div>
             <div class="eight">
                 808
-                <input type="checkbox" value = "" >
-                <input type="checkbox" value = "" >
-                <input type="checkbox" value = "" >
-                <input type="checkbox" value = "" >
-                <input type="checkbox" value = "" >
-                <input type="checkbox" value = "" >
-                <input type="checkbox" value = "" >
-                <input type="checkbox" value = "" >
-                <input type="checkbox" value = "" >
-                <input type="checkbox" value = "" >
-                <input type="checkbox" value = "" >
-                <input type="checkbox" value = "" >
-                <input type="checkbox" value = "" >
-                <input type="checkbox" value = "" >
-                <input type="checkbox" value = "" >
-                <input type="checkbox" value = "" >
+                <input type="checkbox" id="eightBox" value = "">
+                <input type="checkbox" id="eightBox" value = "">
+                <input type="checkbox" id="eightBox" value = "">
+                <input type="checkbox" id="eightBox" value = "">
+                <input type="checkbox" id="eightBox" value = "">
+                <input type="checkbox" id="eightBox" value = "">
+                <input type="checkbox" id="eightBox" value = "">
+                <input type="checkbox" id="eightBox" value = "">
+                <input type="checkbox" id="eightBox" value = "">
+                <input type="checkbox" id="eightBox" value = "">
+                <input type="checkbox" id="eightBox" value = "">
+                <input type="checkbox" id="eightBox" value = "">
+                <input type="checkbox" id="eightBox" value = "">
+                <input type="checkbox" id="eightBox" value = "">
+                <input type="checkbox" id="eightBox" value = "">
+                <input type="checkbox" id="eightBox" value = "">
             </div>
             <div class="hat">
                 hats
-                <input type="checkbox">
-                <input type="checkbox">
-                <input type="checkbox">
-                <input type="checkbox">
-                <input type="checkbox">
-                <input type="checkbox">
-                <input type="checkbox">
-                <input type="checkbox">
-                <input type="checkbox">
-                <input type="checkbox">
-                <input type="checkbox">
-                <input type="checkbox">
-                <input type="checkbox">
-                <input type="checkbox">
-                <input type="checkbox">
-                <input type="checkbox">
+                <input type="checkbox" id="hatBox" value = "">
+                <input type="checkbox" id="hatBox" value = "">
+                <input type="checkbox" id="hatBox" value = "">
+                <input type="checkbox" id="hatBox" value = "">
+                <input type="checkbox" id="hatBox" value = "">
+                <input type="checkbox" id="hatBox" value = "">
+                <input type="checkbox" id="hatBox" value = "">
+                <input type="checkbox" id="hatBox" value = "">
+                <input type="checkbox" id="hatBox" value = "">
+                <input type="checkbox" id="hatBox" value = "">
+                <input type="checkbox" id="hatBox" value = "">
+                <input type="checkbox" id="hatBox" value = "">
+                <input type="checkbox" id="hatBox" value = "">
+                <input type="checkbox" id="hatBox" value = "">
+                <input type="checkbox" id="hatBox" value = "">
+                <input type="checkbox" id="hatBox" value = "">
             </div>
             <div class="clap">
                 clap
-                <input type="checkbox">
-                <input type="checkbox">
-                <input type="checkbox">
-                <input type="checkbox">
-                <input type="checkbox">
-                <input type="checkbox">
-                <input type="checkbox">
-                <input type="checkbox">
-                <input type="checkbox">
-                <input type="checkbox">
-                <input type="checkbox">
-                <input type="checkbox">
-                <input type="checkbox">
-                <input type="checkbox">
-                <input type="checkbox">
-                <input type="checkbox">
+                <input type="checkbox" id="clapBox" value = "">
+                <input type="checkbox" id="clapBox" value = "">
+                <input type="checkbox" id="clapBox" value = "">
+                <input type="checkbox" id="clapBox" value = "">
+                <input type="checkbox" id="clapBox" value = "">
+                <input type="checkbox" id="clapBox" value = "">
+                <input type="checkbox" id="clapBox" value = "">
+                <input type="checkbox" id="clapBox" value = "">
+                <input type="checkbox" id="clapBox" value = "">
+                <input type="checkbox" id="clapBox" value = "">
+                <input type="checkbox" id="clapBox" value = "">
+                <input type="checkbox" id="clapBox" value = "">
+                <input type="checkbox" id="clapBox" value = "">
+                <input type="checkbox" id="clapBox" value = "">
+                <input type="checkbox" id="clapBox" value = "">
+                <input type="checkbox" id="clapBox" value = "">
             </div>
 
         </div>
@@ -146,7 +146,7 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.7.62/Tone.js"></script> 
       <script src="beatpete.js"></script>
 </body>
-
+</center>
 
 
 </html>
